--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <div class="navbar">
+        <div class="submenu">
+            <div class="left-links">
+                <ul>
+                    <li><a href="#" id="first">Become a Seller</a></li>
+                    <li><a href="#" id="first">Rechage & Payments</a></li>
+                    <li><a href="#" id="first">Help and Support</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
     
 </body>
 </html>
