--- a/index.html
+++ b/index.html
@@ -50,6 +50,33 @@
             <h2>NEW MOBILE PHONES IN NEPAL</h2>
             <p>Samsung Mobile Phones, Xiaomi Mobiles, Nokia Mobiles, Oppo Mobiles, Apple iPhones, OnePlus, Sony Mobiles, Huawei Mobiles, Lenovo Mobiles, Colors Mobiles, Gionee Mobiles, HTC Mobiles, Umidigi Mobiles, Tablets, Samsung Tablet, Mobile Accessories </p>
         </div>
+
+        <div class="footer-box">
+            <h1>LATEST LAPTOPS</h1>
+            <p>Apple Laptops, Samsung Laptops, Asus Laptops, Acer Laptops, HP Laptops, Dell Laptops</p>
+        </div>
+
+        <div class="footer-box">
+            <h1>SUMMER APPLIANCES</h1>
+            <p>Air Conditioners, Refrigerators & Fridges, Samsung Refrigerators, Deep Freezers, Generators & Portable Power, Water Dispensers</p>
+        </div>
+
+        <div class="footer-box">
+            <h1>LED TVS PRICES</h1>
+            <p>Samsung LED TVs, Sony LED TVs, Videocon LED TVs</p>
+        </div>
+
+        <div class="footer-box">
+            <h1>CAMERAS</h1>
+            <p>Camera Tripods, Drones, IP & CCTV Cameras </p>
+        </div>
+
+        <div class="footer-box">
+            <h1>LATEST GADGETS</h1>
+            <p>Earphones & Headsets, Power Banks, Smart Watches, Portable Speakers, VR Headsets, PS4 Pro - PS4 Slim, Dell XPS 15, HP Envy 13, HP Spectre x360, Samsung A51, Galaxy Tab A7, Galaxy Tab S7, Samsung A72, Samsung M51, Apple iPhone 11, iPhone 13, Apple Watch, Realme GT Neo 2, Huawei Watch GT 2 Pro, Honor Band 6, Huawei Band 6, Samsung M52, Samsung A52s, Poco F3 GT 5G, iPhone 13 Pro, iPhone 13 Mini, Narzo 50i, Narzo 50A, iPhone 13 Pro Max, OnePlus Nord N10, OnePlus 9 Pro, OnePlus Nord CE 5G, OnePlus 8T, Redmi Note 11, Samsung M33, Samsung A23, Samsung A73, Samsung A33, Samsung A53, Xiaomi Pad 5, NIU, iPhone 14, iPhone 14 Pro, iPhone 14 Plus, iPhone 14 Pro Max</p>
+        </div>
+
+        
     </div>
 
     
