--- a/index.html
+++ b/index.html
@@ -76,7 +76,43 @@
             <p>Earphones & Headsets, Power Banks, Smart Watches, Portable Speakers, VR Headsets, PS4 Pro - PS4 Slim, Dell XPS 15, HP Envy 13, HP Spectre x360, Samsung A51, Galaxy Tab A7, Galaxy Tab S7, Samsung A72, Samsung M51, Apple iPhone 11, iPhone 13, Apple Watch, Realme GT Neo 2, Huawei Watch GT 2 Pro, Honor Band 6, Huawei Band 6, Samsung M52, Samsung A52s, Poco F3 GT 5G, iPhone 13 Pro, iPhone 13 Mini, Narzo 50i, Narzo 50A, iPhone 13 Pro Max, OnePlus Nord N10, OnePlus 9 Pro, OnePlus Nord CE 5G, OnePlus 8T, Redmi Note 11, Samsung M33, Samsung A23, Samsung A73, Samsung A33, Samsung A53, Xiaomi Pad 5, NIU, iPhone 14, iPhone 14 Pro, iPhone 14 Plus, iPhone 14 Pro Max</p>
         </div>
 
-        
+        <div class="footer-box">
+            <h1>COMPUTER COMPONENTS</h1>
+            <p>Ram, Motherboards, Processors, Desktop Casings, CPU Cooling Fans, Gaming Graphic Cards</p>
+        </div>
+
+        <div class="footer-box">
+            <h1>WOMEN'S FASHION</h1>
+            <p>Clothes, Ladies Watches, Jewelry, Sarees, Ladies Kurti Designs, Women Undergarments, Shirts for Ladies & Girls, T-shirts for Ladies & Girls</p>
+        </div>
+
+        <div class="footer-box">
+            <h1>WOMEN'S FASHION</h1>
+            <p>Men's jeans, Bags for Men, Men's Shoes, Men's T-Shirts, Men's Watches </p>
+        </div>
+
+        <div class="footer-box">
+            <h1>ONLINE BOOKSTORE</h1>
+            <p>Stationary Store, Religious Items</p>
+        </div>
+
+        <div class="footer-box">
+            <h1>ONLINE AUTOMOTIVE STORE</h1>
+            <p>Motorcycles - Bikes, Helmets</p>
+        </div>
+
+        <div class="footer-box">
+            <h1>LEADING ONLINE STORES</h1>
+            <p>Goldstar Shoes, Dell, Samsung, Canon, Oppo, Sony, Nokia, Apple</p>
+        </div>
+
+
+        <div class="footer-box">
+            <h1>TRENDING PRODUCTS</h1>
+            <p>Vivo Y20, Oppo A12, Samsung Galaxy M31, iPhone 12, Redmi 9A, Poco F3, Samsung M12, Oppo F19 Pro, Samsung A32, Infinix Hot 10, Samsung A12, OnePlus Nord 2, Samsung M62, Samsung M32, TVS Ntorq, Poco X3 Pro, Poco C3, Acer Nitro 5, Samsung F22, MI 11 Lite, Gold, Macbook Air, iPad Pro, Lenovo Legion 5, Acer Aspire 5, Ideapad 3, HP Pavilion 15, Khukri Rum, Micromax In Note 1, Realme 9i, Realme 9 Pro+, Gas Geyser, Black Horse, Cactus Toy, Antigen Testkit, PS5, Electric Scooter, Z Flip 3, Tab S6, Tab A8, Stealth 13</p>
+        </div>
+
+
     </div>
 
     
